App ready for deployement : Backend and frontend operational
