# BackendSpring/src/main/java/heg/backendspring/enums/StudentSubmissionType.java
@@ -1,0 +1,5 @@
+package heg.backendspring.enums;
+
+public enum StudentSubmissionType {
+    DONE, DONE_LATE, DONE_GOOD, DONE_BUT_NOTHING, DONE_BUT_MEDIOCRE, NOT_DONE_MISSING, EXEMPT
+}
