# BackendSpring/src/main/java/heg/backendspring/models/TPStatusDto.java
@@ -1,9 +1,11 @@
 package heg.backendspring.models;
 
+import heg.backendspring.enums.StudentSubmissionType;
+
 public record TPStatusDto(
         Long id,
         Long studentId,
         Long tpId,
-        boolean studentSubmission
+        StudentSubmissionType studentSubmission
 ) {
 }
